--- a/IEEE_EMB/IEEE_EMB/Pages/Announcments.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Announcments.cshtml
@@ -19,7 +19,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="hero-image">
-                        <img src="~/images/announcements/mobile-notifications.png" alt="Announcements" class="img-fluid">
+                        <img src="~/images/Announcements/Announcements.jpg" alt="Announcements" class="img-fluid">
                     </div>
                 </div>
             </div>
