--- a/IEEE_EMB/IEEE_EMB/Pages/Join.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Join.cshtml
@@ -5,10 +5,10 @@
 }
 
 @section Styles{
-    <link rel="stylesheet" href="~/css/animations.css" />
+    
     <link rel="stylesheet" href="~/css/join.css" />
-    <link rel="stylesheet" href="~/css/style.css" />
-    <link rel="stylesheet" href="~/js/animations.js" />
+    
+    
    
 
 }
@@ -115,5 +115,7 @@
             once: true,
             offset: 100
         });
+            
     </script>
+    <script src="/js/site.js"></script>
 }
