--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/DashLayout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/DashLayout.cshtml
@@ -58,6 +58,7 @@
 
 <body>
     <!-- Layout wrapper -->
+    
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
             <!-- Menu -->
@@ -119,6 +120,11 @@
                 <div class="menu-inner-shadow"></div>
 
                 <ul class="menu-inner py-1">
+                    <li class="menu-item">
+                        <a href="~/Index" class="menu-link">
+                            <div data-i18n="Basic Inputs">Home Page</div>
+                        </a>
+                    </li>
                     <!-- Dashboard -->
                     <li class="menu-item">
                         <a href="index.html" class="menu-link">
@@ -126,6 +132,7 @@
                             <div data-i18n="Analytics">Dashboard</div>
                         </a>
                     </li>
+                    
 
                     <!-- Layouts -->
                     <li class="menu-item">
@@ -380,22 +387,22 @@
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item">
-                                <a href="/AllAdmins" class="menu-link">
+                                <a href="~/Admin/AllAdmins" class="menu-link">
                                     <div data-i18n="Basic Inputs">Admins</div>
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="/AllMembers" class="menu-link">
+                                <a href="~/Admin/AllMembers" class="menu-link">
                                     <div data-i18n="Input groups">Members</div>
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="/AllMentors" class="menu-link">
+                                <a href="~/Admin/AllMentors" class="menu-link">
                                     <div data-i18n="Input groups">Mentors</div>
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="/AllParticipants" class="menu-link">
+                                <a href="~/Admin/AllParticipants" class="menu-link">
                                     <div data-i18n="Input groups">Participants</div>
                                 </a>
                             </li>
@@ -408,7 +415,7 @@
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item">
-                                <a href="/Activities" class="menu-link">
+                                <a href="~/Admin/Activities" class="menu-link">
                                     <div data-i18n="Basic Inputs">Activities</div>
                                 </a>
                             </li>  
