--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AddAdmin.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AddAdmin.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model IEEE_EMB.Pages.AddMentorModel
+@model IEEE_EMB.Pages.Admin.AddAdminModel
 @{
 }
 @{
@@ -7,9 +7,9 @@
 }
 
 <div class="container-xxl flex-grow-1 container-p-y">
-    <!-- Add Mentor Form -->
+    <!-- Add Admin Form -->
     <div class="mb-4">
-        <h5 class="mb-0">Add Mentor</h5>
+        <h5 class="mb-0">Add Admin</h5>
     </div>
 
     <div class="card">
@@ -33,16 +33,10 @@
                     <input id="Password" name="Password" type="password" class="form-control" />
                 </div>
 
-                <!-- Roles -->
+                <!-- Role -->
                 <div class="form-group">
-                    <label for="Roles" class="control-label">Roles</label>
-                    <input id="Roles" name="Roles" class="form-control" />
-                </div>
-
-                <!-- Bio -->
-                <div class="form-group">
-                    <label for="Bio" class="control-label">Bio</label>
-                    <textarea id="Bio" name="Bio" class="form-control"></textarea>
+                    <label for="Role" class="control-label">Role</label>
+                    <input id="Role" name="Role" class="form-control" />
                 </div>
 
                 <!-- CV -->
@@ -58,7 +52,7 @@
                 </div>
 
                 <div class="form-group mt-3">
-                    <a href="/AllMentors">
+                    <a href="/AllAdmins">
                         <button type="button" class="btn btn-primary">Save</button>
                     </a>
                 </div>
