--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AddMentor.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AddMentor.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model IEEE_EMB.Pages.AddAdminModel
+@model IEEE_EMB.Pages.Admin.AddMentorModel
 @{
 }
 @{
@@ -7,9 +7,9 @@
 }
 
 <div class="container-xxl flex-grow-1 container-p-y">
-    <!-- Add Admin Form -->
+    <!-- Add Mentor Form -->
     <div class="mb-4">
-        <h5 class="mb-0">Add Admin</h5>
+        <h5 class="mb-0">Add Mentor</h5>
     </div>
 
     <div class="card">
@@ -33,10 +33,16 @@
                     <input id="Password" name="Password" type="password" class="form-control" />
                 </div>
 
-                <!-- Role -->
+                <!-- Roles -->
                 <div class="form-group">
-                    <label for="Role" class="control-label">Role</label>
-                    <input id="Role" name="Role" class="form-control" />
+                    <label for="Roles" class="control-label">Roles</label>
+                    <input id="Roles" name="Roles" class="form-control" />
+                </div>
+
+                <!-- Bio -->
+                <div class="form-group">
+                    <label for="Bio" class="control-label">Bio</label>
+                    <textarea id="Bio" name="Bio" class="form-control"></textarea>
                 </div>
 
                 <!-- CV -->
@@ -52,7 +58,7 @@
                 </div>
 
                 <div class="form-group mt-3">
-                    <a href="/AllAdmins">
+                    <a href="/AllMentors">
                         <button type="button" class="btn btn-primary">Save</button>
                     </a>
                 </div>
