--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_AnnouncementCard.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_AnnouncementCard.cshtml
@@ -12,9 +12,9 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="announcement-image">
+           @*  <div class="announcement-image">
                 <img src="@Model.ImageUrl" alt="@Model.Title" class="img-fluid">
-            </div>
+            </div> *@
         </div>
     </div>
 </div>
