--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -1,15 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - IEEE BioInformatics</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> *@
-    <link rel="stylesheet" href="~/css/navigation.css" />
-    <script src="~/js/tailwind.config.js" ></script>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />    
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
+    
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
@@ -24,7 +23,10 @@
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
-                    <button class="btn btn-outline-primary ms-2">Manage Dashboard</button>
+                    @if(HttpContextAccessor.HttpContext?.Session.GetString("email") == "Maher@gmail.com"){
+                    @* <button class="btn btn-outline-primary ms-2">Manage Dashboard </button> *@
+                        <a asp-page="/Admin/AddActivity" class="btn btn-outline-primary ms-2">Manage Dashboard</a>
+                    }
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
@@ -49,9 +51,13 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Join">Join</a>
                         </li>
+                        @if (string.IsNullOrEmpty(HttpContextAccessor.HttpContext?.Session.GetString("email")) == true){
                         <li class="nav-item">
                             <a class="nav-link" asp-page="/Login">Login</a>
-                        </li>
+                            </li>
+                        }
+                        
+                        
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="activitiesDropdown" role="button" data-bs-toggle="dropdown">
                                 Activities
@@ -77,7 +83,7 @@
             <p>&copy; @DateTime.Now.Year - IEEE BioInformatics</p>
         </div>
     </footer>
-
+    <script src="~/js/tailwind.config.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js"></script>
