--- a/IEEE_EMB/IEEE_EMB/wwwroot/css/home.css
+++ b/IEEE_EMB/IEEE_EMB/wwwroot/css/home.css
@@ -1,5 +1,5 @@
 .hero-section {
-    background-color: #2F4F4F;
+   background: linear-gradient(135deg, #006064, #7C3AED);
     color: white;
     padding: 4rem 0;
 }
@@ -38,7 +38,7 @@
         left: 0;
         width: 100%;
         height: 2px;
-        background-color: #2F4F4F;
+        background-color: #006064;
     }
 
 .news-slider {
@@ -112,7 +112,7 @@
 }
 
     .dot.active {
-        background: #2F4F4F;
+        background: #006064;
     }
 
 @media (max-width: 992px) {
