Adding photos for home page, and About page

--- a/IEEE_EMB/IEEE_EMB/Pages/Index.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="col-lg-6">
                 <div class="hero-image-placeholder">
                     <!-- Replace with actual image -->
-                    <img src="~/images/hero-placeholder.jpg" alt="IEEE BioInformatics" class="img-fluid">
+                    <img src="~/images/Home.jpg" alt="IEEE BioInformatics" class="img-fluid">
                 </div>
             </div>
             <div class="col-lg-6">
