--- a/IEEE_EMB/IEEE_EMB/Pages/About.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/About.cshtml
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-4">
-                    <img src="~/images/placeholder-image.jpg" alt="Who we are" class="img-fluid rounded shadow">
+                    <img src="~/images/About.png" alt="Who we are" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-md-8">
                     <h2 class="mb-4">Who are we?</h2>
