--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     </div>
                     @if(HttpContextAccessor.HttpContext?.Session.GetString("email") == "Maher@gmail.com"){
                     @* <button class="btn btn-outline-primary ms-2">Manage Dashboard </button> *@
-                        <a asp-page="/Admin/AddActivity" class="btn btn-outline-primary ms-2">Manage Dashboard</a>
+                        <a asp-page="/Admin/DashBoard" class="btn btn-outline-primary ms-2">Manage Dashboard</a>
                     }
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
