--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AddActivity.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AddActivity.cshtml
@@ -14,7 +14,7 @@
 
     <div class="card">
         <div class="card-body">
-            <form>
+            <form method="post">
                 <!-- Title -->
                 <div class="form-group">
                     <label for="Title" class="control-label">Title</label>
@@ -63,9 +63,7 @@
                 </div>
 
                 <div class="form-group mt-3">
-                    <a href="/Activities">
-                        <button type="button" class="btn btn-primary">Save</button>
-                    </a>
+                    <button type="submit" class="btn btn-primary">Save Changes</button>
                 </div>
             </form>
         </div>
