--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AddMember.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AddMember.cshtml
@@ -14,7 +14,7 @@
 
     <div class="card">
         <div class="card-body">
-            <form>
+            <form method="post">
                 <!-- Name -->
                 <div class="form-group">
                     <label for="Name" class="control-label">Name</label>
@@ -74,9 +74,8 @@
                 </div>
 
                 <div class="form-group mt-3">
-                    <a href="/AllMembers">
-                        <button type="button" class="btn btn-primary">Save</button>
-                    </a>
+                    <button type="submit" class="btn btn-primary">Save Changes</button>
+
                 </div>
             </form>
         </div>
