--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AllAdmins.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AllAdmins.cshtml
@@ -9,7 +9,7 @@
 <div class="container-xxl flex-grow-1 container-p-y">
     <!-- Add Assistants Button -->
     <div class="mb-4">
-        <a href="/AddAdmin" class="btn btn-primary">Add Admin</a>
+        <a href="/Admin/AddAdmin" class="btn btn-primary">Add Admin</a>
     </div>
 
     <div class="card">
@@ -37,7 +37,7 @@
                                     <i class="bx bx-dots-vertical-rounded"></i>
                                 </button>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="/EditAdmin">
+                                    <a class="dropdown-item" href="/Admin/EditAdmin">
                                         <i class="bx bx-edit-alt me-1"></i> Edit
                                     </a>
                                     <a class="dropdown-item delete-btn"
