--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AllMembers.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AllMembers.cshtml
@@ -8,7 +8,7 @@
 <div class="container-xxl flex-grow-1 container-p-y">
     <!-- Add Assistants Button -->
     <div class="mb-4">
-        <a href="/AddMember" class="btn btn-primary">Add Member</a>
+        <a href="/Admin/AddMember" class="btn btn-primary">Add Member</a>
     </div>
 
     <div class="card">
@@ -36,7 +36,7 @@
                                     <i class="bx bx-dots-vertical-rounded"></i>
                                 </button>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="/EditMember">
+                                    <a class="dropdown-item" href="/Admin/EditMember">
                                         <i class="bx bx-edit-alt me-1"></i> Edit
                                     </a>
                                     <a class="dropdown-item delete-btn"
