--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/DashLayout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/DashLayout.cshtml
@@ -127,7 +127,7 @@
                     </li>
                     <!-- Dashboard -->
                     <li class="menu-item">
-                        <a href="index.html" class="menu-link">
+                        <a href="/Admin/DashBoard" class="menu-link">
                             <i class="menu-icon tf-icons bx bx-home-circle"></i>
                             <div data-i18n="Analytics">Dashboard</div>
                         </a>
@@ -135,7 +135,7 @@
                     
 
                     <!-- Layouts -->
-                    <li class="menu-item">
+                   @*  <li class="menu-item">
                         <a href="javascript:void(0);" class="menu-link menu-toggle">
                             <i class="menu-icon tf-icons bx bx-layout"></i>
                             <div data-i18n="Layouts">Layouts</div>
@@ -168,7 +168,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> *@
 
                     @* <li class="menu-header small text-uppercase">
                         <span class="menu-header-text">Pages</span>
@@ -626,4 +626,5 @@
     @RenderSection("Scripts", required: false)
 
 </body>
+<script type="module" src="~/lib/chartjs/chart.umd.js"></script>
 </html>
