--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/EditAdmin.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/EditAdmin.cshtml
@@ -13,7 +13,7 @@
 
     <div class="card">
         <div class="card-body">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 <!-- Name -->
                 <input id="Id" name="Id" type="hidden" class="form-control" />
 
@@ -54,7 +54,6 @@
 
                 <div class="form-group mt-3">
                     <button type="submit" class="btn btn-primary">Save Changes</button>
-
                 </div>
             </form>
         </div>
