--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/EditMember.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/EditMember.cshtml
@@ -7,14 +7,14 @@
 }
 
 <div class="container-xxl flex-grow-1 container-p-y">
-    <!-- Edit Member Form -->
+    <!-- Add Admin Form -->
     <div class="mb-4">
         <h5 class="mb-0">Edit Member</h5>
     </div>
 
     <div class="card">
         <div class="card-body">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 <!-- Name -->
                 <div class="form-group">
                     <label for="Name" class="control-label">Name</label>
