--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/EditMentors.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/EditMentors.cshtml
@@ -5,14 +5,15 @@
 @{
     Layout = "~/Pages/Shared/DashLayout.cshtml";
 }
-<div class="row">
-    <div class="col-xl">
-        <div class="card mb-4">
-            <div class="card-header">
-                <h5 class="mb-0">Edit Mentor</h5>
-            </div>
-            <div class="card-body">
-                <form method="post">
+<div class="container-xxl flex-grow-1 container-p-y">
+    <!-- Add Admin Form -->
+    <div class="mb-4">
+        <h5 class="mb-0">Edit Mentor</h5>
+    </div>
+
+    <div class="card">
+        <div class="card-body">
+                <form method="post" enctype="multipart/form-data">
                     <!-- Name -->
                     <div class="form-group">
                         <label for="Name">Name</label>
