--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/EditParticipant.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/EditParticipant.cshtml
@@ -5,13 +5,14 @@
 @{
     Layout = "~/Pages/Shared/DashLayout.cshtml";
 }
-<div class="row">
-    <div class="col-xl">
-        <div class="card mb-4">
-            <div class="card-header">
-                <h5 class="mb-0">Edit Participant</h5>
-            </div>
-            <div class="card-body">
+<div class="container-xxl flex-grow-1 container-p-y">
+    <!-- Add Admin Form -->
+    <div class="mb-4">
+        <h5 class="mb-0">Edit Participant</h5>
+    </div>
+
+    <div class="card">
+        <div class="card-body">
                 <form method="post">
                     <!-- Name -->
                     <div class="form-group">
@@ -53,7 +54,6 @@
             </div>
         </div>
     </div>
-</div>
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
