Modify Enroll button to redirect the user to participation form

--- a/IEEE_EMB/IEEE_EMB/Pages/Seminars.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Seminars.cshtml
@@ -76,7 +76,7 @@
                         <span class="topic-tag">JavaScript</span>
                         <span class="topic-tag">React</span>
                     </div>
-                    <button class="enroll-button">Enroll Now</button>
+                    <a asp-page="/ParticipantForm" class="enroll-button">Enroll Now</a>
                 </div>
             </div>
 
@@ -114,7 +114,7 @@
                         <span class="topic-tag">Statistics</span>
                         <span class="topic-tag">Machine Learning</span>
                     </div>
-                    <button class="enroll-button">Enroll Now</button>
+                    <a asp-page="/ParticipantForm" class="enroll-button">Enroll Now</a>
                 </div>
             </div>
 
@@ -152,7 +152,7 @@
                         <span class="topic-tag">Kotlin</span>
                         <span class="topic-tag">Flutter</span>
                     </div>
-                    <button class="enroll-button">Enroll Now</button>
+                    <a asp-page="/ParticipantForm" class="enroll-button">Enroll Now</a>
                 </div>
             </div>
         </div>
