announce page is now read from the database Activities

--- a/IEEE_EMB/IEEE_EMB/Pages/Seminars.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Seminars.cshtml
@@ -77,6 +77,7 @@
                         <span class="topic-tag">React</span>
                     </div>
                     <a asp-page="/ParticipantForm" class="enroll-button">Enroll Now</a>
+                    <a asp-page="/ParticipantForm" class="enroll-button"> Details </a>
                 </div>
             </div>
 
