--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_AnnouncementCard.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_AnnouncementCard.cshtml
@@ -6,7 +6,7 @@
             <div class="announcement-content">
                 <div class="announcement-header">
                     <h2 class="announcement-title">@Model.Title</h2>
-                    <span class="announcement-date">@Model.Date.ToString("MMMM dd, yyyy")</span>
+                    <span class="announcement-date">@Model.Date</span>
                 </div>
                 <p class="announcement-description">@Model.Description</p>
             </div>
