--- a/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-page="/Seminars">Seminars</a></li>
                                 <li><a class="dropdown-item" asp-page="/Workshops">Workshops</a></li>
-                                <li><a class="dropdown-item" href="#">Journal Club</a></li>
+                                <li><a class="dropdown-item" href="Journal">Journal Club</a></li>
                             </ul>
                         </li>
                     </ul>
