--- a/IEEE_EMB/IEEE_EMB/Pages/Login.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Login.cshtml
@@ -48,6 +48,12 @@
                             <label asp-for="Password">Password</label>
                             <span asp-validation-for="Password" class="invalid-feedback"></span>
                         </div>
+                        @if (!Model.userIsFound)
+                        {
+                            <div class="error-message">
+                                Incorrect email or password. Please try again.
+                            </div>
+                        }
 
                         <div class="d-flex justify-content-between mb-4 animate-slide-up" style="--delay: 0.4s">
                             <div class="form-check">
@@ -101,6 +107,17 @@
             min-height: 100vh;
             background-color: #f7f9fa;
         }
+
+            .error-message {
+        color: #fff;
+        background-color: #f44336; /* Red */
+        padding: 10px;
+        margin: 10px 0;
+        border-radius: 5px;
+        text-align: center;
+        font-size: 14px;
+    }
+
 
         .background-section {
             background-image: url('https://picsum.photos/1920/1080');
